--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "github-proxy",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
-    "octokit": "^4.1.2"
+    "http-errors": "^2.0.0",
+    "http-status": "^2.1.0",
+    "octokit": "^4.1.2",
+    "tsx": "^4.19.3",
+    "zod": "^3.24.2"
   },
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts"
+    "dev": "tsx watch src/index.ts"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
