--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "commonjs",
+    "module": "ESNext",
     "moduleResolution": "node",
     "rootDir": "src",
     "outDir": "./dist",
@@ -31,7 +31,7 @@
     }
   },
   "ts-node": {
-    "require": ["tsconfig-paths/register"]
+    "esm": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
